<resources>
    <string name="Version_Title" >バージョン</string>
    <string name="VersionMessage">Title:法事カレンダー(Light)\nVer:1.7.1.GooglePlay.2021.12.16\n宗教:(仏 教)\nAuthor:licks\nE-mail:licksjp@gmail.com\nHP:http://bahoosoft.net/\nこのアプリの仏教向けの\n法事カレンダーです</string>
    <string name="banner_ad_unit_id_Test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id">ca-app-pub-7821909322657049/6859340493</string>
    <string name="FB_id">1124845534383706</string>
    <string name="hello">Hello World, Base_file!</string>
    <string name="app_name">法事カレンダー(仏教編)</string>
    <string name="speach_All_Clear_Message">オールクリアしました</string>
    <string name="speach_Message_start_Message1">準備OKです、入力ボタンを押して下さい</string>
    <string name="speach_please_Talk_Message2">話してください</string>
    <string name="speach_please_Talk_Message_TopMenu1_Select">メニューの番号1から3のボタンを入れて、入力ボタンを押して下さい</string>
    <string name="speach_please_Talk_Message_Select_Nengou_Wareki_seireki">年号の選択です。西暦か、和暦か、その番号を入れて下さい。</string>
    <string name="speach_please_Talk_Message_Select_Nengou_Wareki_Select1">和暦が選択されました。よろしければ入力ボタンを押して下さい。</string>
    <string name="speach_please_Talk_Message_Select_Nengou_Wareki_Select2">西暦が選択されました。よろしければ入力ボタンを押して下さい。</string>
    <string name="speach_please_Talk_Message_Select_Nengou_Wareki_type_No_Select">和暦の種類の選択です。平成または、昭和で、その番号を入れて下さい。</string>
    <string name="speach_please_Talk_Message_Select_Nengou_Wareki_type_Select1">平成が選択されました。よろしければ入力ボタンを押して下さい。</string>
    <string name="speach_please_Talk_Message_Select_Nengou_Wareki_type_Select2">昭和が選択されました。よろしければ入力ボタンを押して下さい。</string>
    <string name="speach_please_Talk_Message_Check_Message1_Select0">もう一度入れ直して下さい</string>
    <string name="speach_please_Talk_Message_Check_Message1">%1$dが選ばれました。よろしければ入力ボタンを押して下さい。</string>
    <string name="speach_please_Talk_Select_Wareki_Input_Heisei">故人の死亡年を入れてください。こじんのしぼうとしは、平成何年ですか？(平成1年から平成28年のあいだですうじをいれてください)</string>
    <string name="speach_please_Talk_Select_Wareki_Input_Syouwa">故人の死亡年を入れてください\nこじんのしぼうとしは、昭和何年ですか？\n昭和1年から昭和64年のあいだですうじをいれてください</string>
    <string name="speach_please_Talk_Select_Wareki_Input_Seireki">故人のしぼうとしは、せいれきなんねんですか？、4桁の年代を入れて下さい</string>
    <string name="speach_please_Talk_Select_Wareki_Input_Seireki_ThisYear">今年はせいれきなんねんですか？、せいれき4けたをいれて、にゅうりょくぼたんをおしてください</string>
    <string name="speach_please_Talk_Result_Death_Year1_Seireki">今年せいれき%1$d年\nせいれき%2$d年死亡の故人は\n今年は1周忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year3_Seireki">今年せいれき%1$d年\nせいれき%2$d年死亡の故人は\n今年は3回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year7_Seireki">今年せいれき%1$d年\nせいれき%2$d年死亡の故人は\n今年は7回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year13_Seireki">今年せいれき%1$d年\nせいれき%2$d年死亡の故人は\n今年は13回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year23_Seireki">今年せいれき%1$d年\nせいれき%2$d年死亡の故人は\n今年は23回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year27_Seireki">今年せいれき%1$d年\nせいれき%2$d年死亡の故人は\n今年は27回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year33_Seireki">今年せいれき%1$d年\nせいれき%2$d年死亡の故人は\n今年は33回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year37_Seireki">今年せいれき%1$d年\nせいれき%2$d年死亡の故人は\n今年は37回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year50_Seireki">今年せいれき%1$d年\nせいれき%2$d年死亡の故人は\n今年は50回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year_Other_Seireki">今年せいれき%1$d年\nせいれき%2$d年死亡の故人は\n今年は法事はありません\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year1_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は1周忌になります</string>
    <string name="speach_please_Talk_Result_Death_Year3_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は3回忌になります</string>
    <string name="speach_please_Talk_Result_Death_Year7_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は7回忌になります</string>
    <string name="speach_please_Talk_Result_Death_Year13_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は13回忌になります</string>
    <string name="speach_please_Talk_Result_Death_Year23_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は23回忌になります</string>
    <string name="speach_please_Talk_Result_Death_Year27_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は27回忌になります</string>
    <string name="speach_please_Talk_Result_Death_Year27_Heisei_Patern2">今年平成%1$d年\n平成元年死亡の故人は\n今年は27回忌になります</string>
    <string name="speach_please_Talk_Result_Death_Year33_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は33回忌になります</string>
    <string name="speach_please_Talk_Result_Death_Year37_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は37回忌になります</string>
    <string name="speach_please_Talk_Result_Death_Year50_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は50回忌になります</string>
    <string name="speach_please_Talk_Result_Death_Year_Other_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は法事はありません</string>
    <string name="speach_please_Talk_Result_Death_Year1_Syouwa">今年平成:%1$d年\n昭和%2$d年死亡の故人は\n今年は1周忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year3_Syouwa">今年平成:%1$d年\n昭和%2$d年死亡の故人は\n今年は3回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year7_Syouwa">今年平成:%1$d年\n昭和%2$d年死亡の故人は\n今年は7回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year13_Syouwa">今年平成:%1$d年\n昭和%2$d年死亡の故人は\n今年は13回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year17_Syouwa">今年平成:%1$d年\n昭和%2$d年死亡の故人は\n今年は17回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year23_Syouwa">今年平成:%1$d年\n昭和%2$d年死亡の故人は\n今年は23回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year27_Syouwa">今年平成:%1$d年\n昭和%2$d年死亡の故人は\n今年は27回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year33_Syouwa">今年平成:%1$d年\n昭和%2$d年死亡の故人は\n今年は33回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year37_Syouwa">今年平成:%1$d年\n昭和%2$d年死亡の故人は\n今年は37回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year50_Syouwa">今年平成:%1$d年\n昭和%2$d年死亡の故人は\n今年は50回忌になります\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Result_Death_Year_Other_Syouwa">今年平成:%1$d年\n昭和%2$d年死亡の故人は\n今年は法事はありません\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="speach_please_Talk_Input_Dead_Year">故人のしぼうとしを求めます\n故人は今年は、何回忌ですか？</string>
    <string name="speach_please_Talk_Push_Select_Message_No_Select">故人の死亡年の年号を入力します\n和暦か西暦かの番号を選んでください</string>
    <string name="speach_please_Talk_Push_Select_Message_Select1">われきがせんたくされました、よろしければにゅうりょくぼたんをおしてください</string>
    <string name="speach_please_Talk_Push_Select_Message_Select2">せいれきがせんたくされました、よろしければにゅうりょくぼたんをおしてください</string>
    <string name="speach_please_Talk_Result_Dead_year_Patern0_Heisei">今年:%1$d周忌\n故人の死亡年は平成%2$d年です</string>
    <string name="speach_please_Talk_Result_Dead_year_Patern1_Heisei">今年:%1$d回忌\n故人の死亡年は平成%2$d年です</string>
    <string name="speach_please_Talk_Result_Dead_year_Patern1_Heisei2">今年:%1$d回忌\n故人の死亡年は平成元年です</string>
    <string name="speach_please_Talk_Select_Wareki_Input_Heisei_This_Year">今年は平成何年ですか?\n(平成27年以降で入力してください)</string>
    <string name="speach_please_Talk_Result_Dead_year_Patern2_Syouwa">今年:%1$d回忌\n故人の死亡年は昭和%2$d年です</string>
    <string name="speach_please_Talk_Result_Dead_year_Patern1_Seireki">今年西暦%1$d年\n今年:%2$d周忌\n故人の死亡年は西暦%3$d年です</string>
    <string name="speach_please_Talk_Result_Dead_year_Patern2_Seireki">今年西暦%1$d年\n今年:%2$d回忌\n故人の死亡年は西暦%3$d年です</string>
    <string name="speach_please_Talk_Result_Houji_Tosi_List_Seireki">今年:西暦%1$d年の法事としの一覧リストです</string>
    <string name="speach_please_Talk_Result_Houji_Tosi_List_Wareki">今年:平成:%1$d年の法事としの一覧リストです</string>
    <string name="app_namwe_advance">Base screen(広告欄）</string>
    <string name="app_name0">Activity0\nActivity1</string>
	<string name="app_name1">広 告 欄</string>
    <string name="activity_animation_duration">300</string>
    <string name="Data_Statas0_No_Data">Data0:(No Data)</string>
    <string name="Data_Statas1_No_Data">Data1:(No Data)</string>
    <string name="Data_Statas2_No_Data">Data2:(No Data)</string>
    <string name="Data_Statas3_No_Data">Data3:(No Data)</string>
    <string name="Data_Statas4_No_Data">Data4:(No Data)</string>
    <string name="Data_Statas5_No_Data">Data6:(No Data)</string>
    <string name="Data_Statas6_No_Data">Data6:(No Data)</string>
    <string name="Data_Statas7_No_Data">Data7:(No Data)</string>
    <string name="Data_Statas8_No_Data">Data8:(No Data)</string>
    <string name="Data_Statas9_No_Data">Data9:(No Data)</string>
     <string name="Data_Statas_rate">No Data</string>
    <string name="Push_Select_TopMenu_No_Select">番号を選んでください\n1:故人の死亡年から何回(周)忌か\n2.故人の死亡年を求める\n3.法事の年一覧リスト\n\n\n\n\n選択番号:%1$d.無選択</string>
    <string name="Push_Select_TopMenu_Select1">番号を選んでください\n1:故人の死亡年から何回(周)忌か\n2.故人の死亡年を求める\n3.法事の年一覧リスト\n\n\n\n\n選択番号:%1$d.故人の死亡年から何回(周)忌か</string>
    <string name="Push_Select_TopMenu_Select2">番号を選んでください\n1:故人の死亡年から何回(周)忌か\n2.故人の死亡年を求める\n3.法事の年一覧リスト\n\n\n\n\n選択番号:%1$d.故人の死亡年を求める</string>
    <string name="Push_Select_TopMenu_Select3">番号を選んでください\n1:故人の死亡年から何回(周)忌か\n2.故人の死亡年を求める\n3.法事の年一覧リスト\n\n\n\n\n選択番号:%1$d.法事の年一覧リスト</string>
    <string name="Push_Select_Message_No_Select">故人の死亡年の年号を入力します\n和暦入力か西暦入力かを選んでください\n1:和歴入力\n2.西歴入力\n\n\n\n選択番号:%1$d.無選択</string>
    <string name="Push_Select_Message_Select1">故人の死亡年の年号を入力します\n和暦入力か西暦入力かを選んでください\n1:和歴入力\n2.西歴入力\n\n\n\n選択番号:%1$d.和歴入力\n入力ボタンで決定</string>
    <string name="Push_Select_Message_Select2">故人の死亡年の年号を入力します\n和暦入力か西暦入力かを選んでください\n1:和歴入力\n2.西歴入力\n\n\n\n選択番号:%1$d.西歴入力\n入力ボタンで決定</string>
    <string name="Select_Wareki_Select_No_Select">番号を選んでください\n1:平成\n2.昭和\n\n\n\n選択番号:%1$d.無選択</string>
    <string name="Select_Wareki_Select_Select1">番号を選んでください\n1:平成\n2.昭和\n\n\n\n\n選択番号:%1$d.平成\n入力ボタンで決定</string>
    <string name="Select_Wareki_Select_Select2">番号を選んでください\n1:平成\n2.昭和\n\n\n\n\n選択番号:%1$d.昭和\n入力ボタンで決定</string>
    <string name="Select_Wareki_Input_Heisei">故人の死亡年を入れてください\n平成何年ですか？\n(平成1年〜平成27年)\n\n\n\n平成:%1$d年</string>
    <string name="Select_Wareki_Input_Syouwa">故人の死亡年を入れてください\n昭和何年ですか？\n(昭和1年〜昭和64年)\n\n\n\n昭和:%1$d年</string>
   <string name="Select_Wareki_Input_Heisei_This_Year">今年は平成何年ですか?\n(平成27年以降で入力してください)\n\n\n\n平成:%1$d年</string>
    <string name="Result_Death_Year1_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は1周忌になります\n\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="Result_Death_Year3_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は3回忌になります\n\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="Result_Death_Year7_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は7回忌になります\n\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="Result_Death_Year13_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は13回忌になります\n\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="Result_Death_Year23_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は23回忌になります\n\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="Result_Death_Year27_Heisei">今年平成:%1$d年\n平成%2$d年死亡の故人は\n今年は27回忌になります\n\n\n\n\n\n\nクリアボタンを押してください</string>
    <string name="Start_Message">入力ボタンを押してください</string>
    <string name="Button_one"><b>1</b></string>
    <string name="Button_two"><b>2</b></string>
    <string name="Button_three"><b>3</b></string>
    <string name="Button_four"><b>4</b></string>
    <string name="Button_five"><b>5</b></string>
    <string name="Button_six"><b>6</b></string>
    <string name="Button_seven"><b>7</b></string>
    <string name="Button_eight"><b>8</b></string>
    <string name="Button_nine"><b>9</b></string>
    <string name="Button_zero"><b>0</b></string>
    <string name="Button_clear"><b>クリア</b></string>
    <string name="Button_EXE"><b>入力</b></string>
</resources>