<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
			  android:orientation="vertical"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
>
	<jp.adlantis.android.AdlantisView
		android:id="@+id/adView"
		android:layout_width="fill_parent"
		android:layout_height="50dp"
		/>
	<!--
	<jp.co.fullspeed.polymorphicads.PolymorphicAdsContainer
		android:id="@+id/ad_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
		-->
		<TextView
			  android:id="@+id/view_screen" 
			  android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:layout_x="10px"
              android:layout_y="10px"
              android:background="@color/White"
              android:textColor="@color/Black"
              android:lines="9"
              android:maxLines="9"
              android:gravity="left"
              android:textStyle="bold"
              android:cursorVisible="true"
              android:digits="true"
              android:layout_weight="1"
              android:text="@string/Start_Message"
				>
		</TextView>
	
	
<TableLayout 
				android:id="@+id/Screen_Color"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@color/Lime"
				android:textColor="@color/White"
				android:padding="3dip"
				android:layout_weight="1"
				>
		<TableRow>
		 <LinearLayout
             android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             android:layout_weight="1"
        >
<Button
				android:id="@+id/seven_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
	android:textSize="30sp"
				android:layout_x="107px"
				android:layout_y="190px"
				android:text="@string/Button_seven"
				android:layout_weight="1"
				android:textColor="@color/Black"
>
</Button>
<Button
				android:id="@+id/eight_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
	android:textSize="30sp"
				android:layout_x="107px"
				android:layout_y="190px"
				android:text="@string/Button_eight"
				 android:layout_weight="1"
				 android:textColor="@color/Black"
>
</Button>
<Button
				android:id="@+id/nine_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
	android:textSize="30sp"
				android:layout_x="107px"
				android:layout_y="190px"
				android:text="@string/Button_nine"
				android:layout_weight="1"
				android:textColor="@color/Black"
>
</Button>
		 
</LinearLayout>
</TableRow>
<TableRow>
<LinearLayout 
				 android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             android:layout_weight="1"
>
<Button
				android:id="@+id/four_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
	android:textSize="30sp"
				android:layout_x="107px"
				android:layout_y="190px"
				 android:layout_weight="1"
				android:text="@string/Button_four"
				android:textColor="@color/Black"
>
</Button>
<Button
				android:id="@+id/five_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
	android:textSize="30sp"
				android:layout_x="107px"
				android:layout_y="10px"
				android:text="@string/Button_five"
				 android:layout_weight="1"
				 android:textColor="@color/Black"
>
</Button>
<Button
				android:id="@+id/six_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
	android:textSize="30sp"
				android:layout_x="107px"
				android:layout_y="190px"
				android:text="@string/Button_six"
				 android:layout_weight="1"
				 android:textColor="@color/Black"
>
</Button>

</LinearLayout>
</TableRow>
<TableRow>
<LinearLayout
  android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             android:layout_weight="1"
            >
<Button
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
	android:textSize="30sp"
				android:layout_x="107px"
				android:layout_y="190px"
				android:text="@string/Button_one" 
				android:id="@+id/one_button"
				 android:layout_weight="1"
				 android:textColor="@color/Black"
>
</Button>
<Button
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
	android:textSize="30sp"
				android:layout_x="107px"
				android:layout_y="310px" 
				android:text="@string/Button_two" 
				android:id="@+id/two_button"
				 android:layout_weight="1"
				 android:textColor="@color/Black"
>
</Button>
<Button
				android:id="@+id/three_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="30sp"
				android:layout_x="107px"
				android:layout_y="190px"
				android:text="@string/Button_three"
				 android:layout_weight="1"
				 android:textColor="@color/Black"

>
</Button>
</LinearLayout>
</TableRow>
<TableRow>
<LinearLayout 
			android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             android:layout_weight="1"
>
<Button
				android:id="@+id/clear_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="24sp"
				android:layout_x="107px"
				android:layout_y="250px"
				android:text="@string/Button_clear"
				 android:layout_weight="1"
				 android:textColor="@color/Red"
				>
</Button>
<Button
				android:id="@+id/zero_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="22sp"
				android:layout_x="107px"
				android:layout_y="190px"
				android:text="@string/Button_zero"
				 android:layout_weight="1"
				 android:textColor="@color/Black"
>
</Button>
<Button
				android:id="@+id/exe_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="24sp"
				android:layout_x="107px"
				android:layout_y="195px"
				android:textColor="@color/Red"
				android:text="@string/Button_EXE"
				 android:layout_weight="1"
>
</Button>

</LinearLayout>
</TableRow>
</TableLayout>

	<com.google.android.gms.ads.AdView
		android:id="@+id/adView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		ads:adSize="BANNER"
		ads:adUnitId="@string/banner_ad_unit_id">
	</com.google.android.gms.ads.AdView>

</LinearLayout>